Finish edit and update views

--- a/ninety_nine_cats/app/views/cats/new.html.erb
+++ b/ninety_nine_cats/app/views/cats/new.html.erb
@@ -17,7 +17,7 @@
   <label>
     Color:
     <select name="cat[color]">
-      <option disabled selected="selected">-- Select a Color --</option>
+      <option disabled selected>-- Select a Color --</option>
       <% Cat::COLORS.each do |color| %>
         <option value="<%=color%>"><%=color%></option>
       <% end %>
